Fix enum constant generation